No issues in color contrast in the AA level and got borders on temple cards.

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -20,9 +20,9 @@ header {
     padding: 20px;
 }
 
-h1 {
+/* h1 {
     padding-left: 1.2rem;
-}
+} */
 
 /* header .navigation {
     text-align: center;
@@ -47,13 +47,13 @@ nav {
     text-decoration-color: #0d0a0a;
     justify-content: space-around;
     font-weight: bold;
-    font-size: 1.5rem;
-    width: 100%;
+    font-size: 2rem;
+    /* width: 100%; */
 }
 
-.active {
+/* .active {
     font-weight: 700;
-}
+} */
 
 main {
     display: flex;
@@ -212,7 +212,8 @@ footer {
 
     nav {
         flex-direction: row;
-        background-color: transparent;
+        /* background-color: transparent; */
+        text-decoration-color: #FCFCFC;
         max-height: 80px;
     }
 
@@ -247,7 +248,6 @@ footer {
     .container-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-
         grid-gap: 30px;
         margin: 0;
     }
